# fsa-fastapi

./: .gitignore  Dockerfile  deneme.py  docker-compose.yaml  klasor_listesi.txt  main.py  model2.model  prediction.py  product_names.txt  pyproject.toml  readme.md
core/: security.py
db/: base.py  session.py
db/enity/: basket_entity.py  diet_entity.py  ingredient_entity.py  product_entity.py  user_entity.py
db/repository/: basket_repo.py  diet_repo.py  product_repo.py  user_repo.py
fsa_fastapi/: .gitignore  prediction.py  product_names.txt  requirements.txt
fsa_fastapi/core/: config.py  security.py
fsa_fastapi/db/enity/: basket_entity.py  product_entity.py  user_entity.py
fsa_fastapi/db/repository/: basket_repo.py  ingredient_repo.py  product_repo.py  user_repo.py
fsa_fastapi/model/: basket_model.py  product_model.py  user_model.py
fsa_fastapi/route/: route_basket.py  route_diet.py  route_ingredient.py  route_product.py  route_users.py
fsa_fastapi/tests/test_routes/: test_users.py
model/: diet_model.py  ingredient_model.py  product_model.py  user_model.py
route/: base.py  route_basket.py  route_diet.py  route_ingredient.py  route_login.py  route_product.py
tests/: conftest.py
